[package]
name = "graphicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { version = "0.53.0", features=["vulkan"], optional = true }
ash = "0.37.3"
raw-window-handle = { version = "0.6.0", optional = true }