[package]
name = "sample_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.6.0"
glfw = "0.53.0"
winit = "0.29.3"
graphicat = { path = "..", features = ["raw-window-handle", "glfw"] }